Revise README for project deprecation notice
Updated README to reflect project deprecation and link to new repository.